<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input"
            app:layout_constraintVertical_bias="0.95">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clearBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:backgroundTint="#DD2C00"
                    android:onClick="clearButtonClicked"
                    android:text="@string/clear"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bracketLeftBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="parButtonClicked"
                    android:text="@string/bracketLeftBTN"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bracketRightBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="expButtonClicked"
                    android:text="@string/bracketRightBTN"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/divideBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="divideButtonClicked"
                    android:text="@string/divide"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sevenBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="sevenButtonClicked"
                    android:text="@string/seven"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/eightBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="eightButtonClicked"
                    android:text="@string/eight"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nineBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="nineButtonClicked"
                    android:text="@string/nine"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/multiplyBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="multiplyButtonClicked"
                    android:text="@string/multiply"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/fourBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="fourButtonClicked"
                    android:text="@string/four"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/fiveBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="fiveButtonClicked"
                    android:text="@string/five"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sixBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="sixButtonClicked"
                    android:text="@string/six"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/subtractBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="subtractButtonClicked"
                    android:text="@string/subtract"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/oneBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="oneButtonClicked"
                    android:text="@string/one"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/twoBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="twoButtonClicked"
                    android:text="@string/two"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/threeBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="threeButtonClicked"
                    android:text="@string/three"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="addButtonClicked"
                    android:text="@string/add"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/zeroBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="zeroButtonClicked"
                    android:text="@string/zero"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pointBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:onClick="decimalButtonClicked"
                    android:text="@string/point"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/equalBTN"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/circle"
                    android:backgroundTint="#43A047"
                    android:onClick="equalButtonClicked"
                    android:text="@string/equal"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="false"
            android:inputType="none"
            android:textSize="36sp"
            android:textAlignment="textEnd"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/output"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:autofillHints="false"
            android:inputType="none"
            android:text="@string/display"
            android:textAlignment="textEnd"
            android:textSize="36sp"
            android:textColor="#00FF00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backspaceBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/backspace"
            android:textColor="#000000"
            android:onClick="backSpaceAction"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/backspace" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>